fixed code overflow on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -109,6 +109,7 @@ code {
   color: gray; 
   background: #f1f0ea;
   line-height: 1.4em;
+  word-wrap: break-word;
 }
 
 
